fix: fix stretched img on safari

--- a/src/components/Login/login.module.css
+++ b/src/components/Login/login.module.css
@@ -25,6 +25,7 @@
   width: 100%;
   height: auto;
   max-width: 400px;
+  object-fit: contain;
 }
 
 .login img.logo {
